gcc/testsuite/gm2/iso/const/fail/testchr2.mod
MODULE testchr2 ;

CONST
   foo = CHR (c) ;

VAR
   c: CARDINAL ;
BEGIN

END testchr2.
